--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.8.1",
     "qrcode.js": "^0.0.1",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
