--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "exhibition-app",
   "version": "1.0.0",
+  "description": "AI Image Studio for Exhibition",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "openai": "^6.8.1",
-    "qrcode.js": "^0.0.1",
-    "socket.io": "^4.8.1",
-    "uuid": "^13.0.0"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1",
+    "openai": "^4.47.1",
+    "node-fetch": "^2.6.7"
   }
 }
