--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
+    "node-fetch": "^2.6.7",
     "openai": "^4.47.1",
-    "node-fetch": "^2.6.7"
+    "sharp": "^0.34.5",
+    "uuid": "^9.0.1"
   }
 }
